<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PropertyAnimationActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewAndroidPA"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/android" />

    <Button
        android:id="@+id/btnScaleAnimationPA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/txt_btn_scale_animation" />

    <Button
        android:id="@+id/btnRotateAnimationPA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/txt_btn_rotate_animation" />

    <Button
        android:id="@+id/btnAlphaAnimationPA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/txt_btn_alpha_animation" />

    <Button
        android:id="@+id/btnTranslateAnimationPA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/txt_btn_translate_animation" />

    <Button
        android:id="@+id/btnGroupAnimationPA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/txt_btn_agrupar_animation" />

    <Button
        android:id="@+id/btnAnimationSimplificado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/txt_btn_simplificado_animation" />

</androidx.appcompat.widget.LinearLayoutCompat>